--- a/lexer/CMakeLists.txt
+++ b/lexer/CMakeLists.txt
@@ -1,10 +1,10 @@
 add_library(lexer STATIC
-        Lexer.cpp
-        Lexer.hpp
-        Token.hpp
-        Globals.cpp
-        Token.cpp)
+        src/Lexer.cpp
+        include/fas/lexer/Lexer.hpp
+        include/fas/token/Token.hpp
+        src/Globals.cpp
+        src/Token.cpp)
 target_include_directories(lexer PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
