--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,4 +1,6 @@
-message(STATUS "Downloading Catch2...")
+
+include(FetchContent)
+
 add_subdirectory(catch2)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} PARENT_SCOPE)
